--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,4 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [redirect=301,L]
 
 
 
-ErrorDocument 404 https://b166er.xyz/404.html
+ErrorDocument 404 http://localhost/pizzas-cat/404.html
