--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
-{
+{ 
+    "lang": "fr",
     "name": "Pizza Express",
     "short_name": "PIZZA",
     "start_url": "index.php",
@@ -7,7 +8,12 @@
     "orientation": "portrait-primary",
     "display": "standalone",
 
-    "icons": [ 
+    "icons": [
+        {
+        "src": "app/Public/front/img/Logo.webp",
+        "sizes": "64x64",
+        "type": "image/webp"
+        },
         {
           "src": "app/Public/front/img/Logo_192.png",
           "type": "image/png",
@@ -17,6 +23,12 @@
           "src": "app/Public/front/img/Logo_512.png",
           "type": "image/png",
           "sizes": "512x512"
+        },
+        {         
+            "src": "app/Public/front/img/maskable_icon.png",
+            "sizes": "64x64",
+            "type": "image/png",
+            "purpose": "any maskable"
         }
         ]
 }
